syntax = "proto3";

package mpataki.jobqueue.v1;

option go_package = "github.com/mpataki/go-job-queue/proto/gen/go/mpataki/jobqueue/v1;jobqueuev1";

service JobService {
  rpc EnqueueJob(EnqueueJobRequest) returns (EnqueueJobResponse) {}
  rpc GetJob(GetJobRequest) returns (GetJobResponse) {}
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {}
}

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_RUNNING = 2;
  JOB_STATUS_COMPLETED = 3;
  JOB_STATUS_FAILED = 4;
}

message Job {
  string id = 1;
  string type = 2;
  bytes payload = 3;
  JobStatus status = 4;
  int64 execution_time_ms = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message EnqueueJobRequest {
  string type = 1;
  bytes payload = 2;
  optional int64 execution_time_ms = 3;
}

message EnqueueJobResponse {
  Job job = 1;
}

message GetJobRequest {
  string id = 1;
}

message GetJobResponse {
  Job job = 1;
}

message CancelJobRequest {
  string id = 1;
}

message CancelJobResponse {}
